[gd_scene load_steps=9 format=3 uid="uid://bt1la6s52krxe"]

[ext_resource type="Theme" uid="uid://cl3pkwueh4mag" path="res://src/core/main_theme.tres" id="1_4rn03"]
[ext_resource type="Script" uid="uid://cvmchc2851mho" path="res://src/ui/hud/hud.gd" id="1_eqvli"]
[ext_resource type="Texture2D" uid="uid://cljgkydr5nckn" path="res://assets/images/scratch/health_bar_background_texture_rect.png" id="3_076te"]
[ext_resource type="Texture2D" uid="uid://d2eysf3ljvqkr" path="res://assets/images/scratch/heart_icon.png" id="3_ariom"]
[ext_resource type="Texture2D" uid="uid://dijmjmc6bnxio" path="res://assets/images/scratch/shield_icon.png" id="4_4dm8p"]
[ext_resource type="Texture2D" uid="uid://p1h66vedvo7x" path="res://assets/images/scratch/health_bar_progress_texture_rect.png" id="4_ariom"]
[ext_resource type="PackedScene" uid="uid://cm46trhxs8fvs" path="res://src/ui/hud/hud_mask_card.tscn" id="6_cio14"]
[ext_resource type="Texture2D" uid="uid://g8krq86co53s" path="res://assets/images/scratch/mask_of_imaginations.png" id="8_bpdxj"]

[node name="Hud" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_4rn03")
script = ExtResource("1_eqvli")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GameState" type="HBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="LeftContent" type="VBoxContainer" parent="MarginContainer/GameState"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Spacer2" type="Control" parent="MarginContainer/GameState/LeftContent"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
size_flags_vertical = 3

[node name="HealthRow" type="HBoxContainer" parent="MarginContainer/GameState/LeftContent"]
layout_mode = 2

[node name="HeartIcon" type="TextureRect" parent="MarginContainer/GameState/LeftContent/HealthRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(18, 16)
layout_mode = 2
texture = ExtResource("3_ariom")

[node name="ShieldIcon" type="TextureRect" parent="MarginContainer/GameState/LeftContent/HealthRow"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(18, 16)
layout_mode = 2
texture = ExtResource("4_4dm8p")

[node name="HealthBar" type="TextureProgressBar" parent="MarginContainer/GameState/LeftContent/HealthRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.1
value = 1.0
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = ExtResource("3_076te")
texture_progress = ExtResource("4_ariom")

[node name="Spacer" type="Control" parent="MarginContainer/GameState/LeftContent"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="MasksContainer" type="HBoxContainer" parent="MarginContainer/GameState/LeftContent"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="HudMaskCard" parent="MarginContainer/GameState/LeftContent/MasksContainer" instance=ExtResource("6_cio14")]
layout_mode = 2
is_collected = true

[node name="HudMaskCard2" parent="MarginContainer/GameState/LeftContent/MasksContainer" instance=ExtResource("6_cio14")]
layout_mode = 2
mask_type = 1
is_collected = true

[node name="HudMaskCard3" parent="MarginContainer/GameState/LeftContent/MasksContainer" instance=ExtResource("6_cio14")]
layout_mode = 2
mask_type = 2
is_collected = true

[node name="HudMaskCard4" parent="MarginContainer/GameState/LeftContent/MasksContainer" instance=ExtResource("6_cio14")]
layout_mode = 2
mask_type = 3
is_collected = true

[node name="HudMaskCard5" parent="MarginContainer/GameState/LeftContent/MasksContainer" instance=ExtResource("6_cio14")]
layout_mode = 2
mask_type = 4
is_collected = true

[node name="HudMaskCard6" parent="MarginContainer/GameState/LeftContent/MasksContainer" instance=ExtResource("6_cio14")]
layout_mode = 2
mask_type = 5
is_collected = true

[node name="Spacer" type="Control" parent="MarginContainer/GameState"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="MiddleContent" type="VBoxContainer" parent="MarginContainer/GameState"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="Spacer2" type="Control" parent="MarginContainer/GameState"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="RightContent" type="VBoxContainer" parent="MarginContainer/GameState"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer2"]
layout_mode = 2

[node name="Title" type="TextureRect" parent="MarginContainer/HBoxContainer2/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -51.0
offset_top = 32.0
offset_right = 51.0
offset_bottom = 80.0
grow_horizontal = 2
scale = Vector2(2, 2)
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("8_bpdxj")

[node name="Spacer2" type="Control" parent="MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
